[tool.poetry]
name = "prefect-eval"
version = "0.1.0"
description = ""
authors = ["Adrian Schneider <adrian.schneider@sangl.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
prefect = { version = "^3.0.0rc13", allow-prereleases = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
